<resources>
    <string name="app_name">Bloom</string>
    <string name="plan_and_organize_your_life_to_n_archive_your_strengths_n_challenge_and_goals">Plan and organize your life to \n archive your strengths, \n challenge and goals</string>
    <string name="plan_your_day_and_n_become_a_better_you">Plan your day and \n become a better you</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="Skip">Skip</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="reach_your_goals">Reach your goals</string>
    <string name="presentation_project">Presentation Project</string>
    <string name="sunday_19_december_2022">Sunday,19 December 2022</string>
    <string name="waktu">09:00 AM</string>
    <string name="deskripsi">Description</string>
    <string name="isi">Greet the audience and introduce yourself. Next, Introduction (Problem, Solution,Goals and ideation). The main body of your talk include user interview, user persona, user flow and userflow. Conclusion with UI design and Design system. And lastly closing</string>
    <string name="edit">Edit</string>

    <string name="back">back</string>
    <string name="new_task">New Task</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="date">Mon, 20 Dec 2021</string>
    <string name="_09_00_am">09:00 AM</string>
    <string name="repeat">Repeat</string>
    <string name="none">none</string>
    <string name="tags">Tags</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>


    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="stay_focus_and_nmotivated">Stay focus and\nmotivated</string>
    <string name="stay_focus_while_we_track_your_nday_to_motivated_you_to_reach_nyour_goals">Stay focus while we track your\nday to motivated you to reach\nyour goals</string>
    <string name="to_do_list">To-do List</string>
    <string name="show_calendar">show calendar</string>
    <string name="important">Important</string>
    <string name="basic">Basic</string>
    <string name="checklist3">Buy Some Coffee</string>
    <string name="checklist1">Progress Project</string>
    <string name="checklist2">Presentation Project</string>
    <string name="bloom">Bloom</string>
    <string name="it_s_now_or_never_there_s_nothing_better_than_achieving_your_goals_whatever_they_might_be">It’s now or never. There\'s nothing better than achieving your goals, whatever they might be</string>
    <string name="get_started">GET STARTED</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="or_login_with">Or login with</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="to_do">To-do</string>
    <string name="timer">Timer</string>
    <string name="or_create_new_account_with">Or create new account with</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="username">Username</string>
    <string name="textview">TextView</string>
    <string name="_120">120</string>
    <string name="night_coding">Night Coding</string>
    <string name="accessibility">Accessibility</string>
    <string name="security">Security</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="help">Help</string>
    <string name="push_notification">Push Notification</string>
    <string name="notification">Notification</string>
    <string name="data_usage">Data Usage</string>
    <string name="diplay">Diplay</string>
    <string name="general">General</string>
    <string name="total_focus">Total Focus</string>
    <string name="task_completed">Task Completed</string>
    <string name="logout">Logout</string>
    <string name="breaks">Break</string>
    <string name="total_breaks">Total breaks</string>
    <string name="_120_mins">120 mins</string>
    <string name="_4_breaks">4 breaks</string>
    <string name="_1_breaks">1 Breaks</string>
    <string name="_1_of_3_sessions">1 of 3 sessions</string>
    <string name="mins">mins</string>
    <string name="delete_timer">Delete Timer</string>
    <string name="_0_breaks">0 breaks</string>
    <string name="_15_minutes">15 minutes</string>
    <string name="skip_breaks">Skip breaks</string>
    <string name="prev">PREV</string>
    <string name="next">NEXT</string>
    <string name="my_task">My task</string>
    <string name="my_profile">My Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>

</resources>