<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title"
            android:gravity="center|left"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginStart="18dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/inputTitle"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/input_habit"
            android:drawablePadding="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="12sp">

            <TextView
                android:layout_width="match_parent"

                android:layout_height="match_parent"
                android:layout_marginStart="18dp"
                android:layout_weight="0.5"
                android:text="@string/breaks"
                android:gravity="center|left"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/black"
                />

            <Switch
                android:id="@+id/switchpopup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_marginEnd="18dp"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/total_breaks"
                android:layout_marginStart="18dp"
                android:gravity="center|left"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:layout_weight="0.5"
                />

            <TextView

                android:id="@+id/breaks"
                android:gravity="center"
                android:layout_marginVertical="15dp"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:layout_marginEnd="18dp"
                android:layout_weight="0.5"
                android:backgroundTint="@color/light_yellow"
                android:text="@string/_0_breaks"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="18dp"
                android:gravity="center|left"
                android:layout_weight="0.5"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_regular"
                />

            <Button
                android:id="@+id/batas_waktu"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:backgroundTint="@color/light_yellow"
                android:layout_marginEnd="18dp"
                android:text="@string/_15_minutes"
                android:textColor="@color/black"
                />

        </LinearLayout>



        <Button
            android:id="@+id/save_popup"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#000000"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/save"
            android:textAllCaps="false"
            app:cornerRadius="10dp"
             />

        <Button
            android:id="@+id/cancel_popup"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:cornerRadius="10dp" />


    </LinearLayout>

</androidx.cardview.widget.CardView>