<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:id="@+id/actdl"
    tools:context=".CreateToDoList">


    <TextView
        android:id="@+id/textView14"
        android:layout_width="132dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="120dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/new_task"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonback"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="32sp"
        android:layout_height="32sp"
        android:layout_marginTop="65dp"
        android:backgroundTint="#F7E353"
        android:drawableLeft="@drawable/back"
        android:drawablePadding="10dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/editTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/input_habit"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/editTitle"
        app:layout_constraintStart_toStartOf="@+id/editTitle"
        app:layout_constraintTop_toBottomOf="@+id/editTitle" />

    <EditText
        android:id="@+id/edit_desc"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:background="@drawable/input_habit"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Switch
        android:id="@+id/switchTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="16dp"
        android:text="@string/time"
        app:layout_constraintEnd_toEndOf="@+id/edit_desc"
        app:layout_constraintStart_toStartOf="@+id/edit_desc"
        app:layout_constraintTop_toBottomOf="@+id/edit_desc"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/switchTask"
        app:layout_constraintStart_toStartOf="@+id/switchTask"
        app:layout_constraintTop_toBottomOf="@+id/switchTask">

        <Button
            android:id="@+id/tanggal_target"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FEF5B6"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/date"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/jam_target"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="#FEF5B6"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/_09_00_am"
            android:textAllCaps="false"
            android:textColor="@color/black" />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="166dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/tags"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/tags"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="#FEF5B6"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/none"
            android:textAllCaps="false"
            android:textColor="@color/black" />

    </LinearLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="378dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#000000"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/save"
        android:textAllCaps="false"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout5"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

    <Button
        android:id="@+id/cancle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="#000000"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/save"
        app:layout_constraintStart_toStartOf="@+id/save"
        app:layout_constraintTop_toBottomOf="@+id/save" />


</androidx.constraintlayout.widget.ConstraintLayout>