<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ToDoListMainScreen">

    <include
        android:id="@+id/back_todolist_detail"
        layout="@layout/back" />

    <ImageButton
        android:id="@+id/buttondelete"
        android:layout_width="32sp"
        android:layout_height="32sp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/delete_filled"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/tag_type"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="136dp"
        app:cardBackgroundColor="@color/light_red"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tag_text"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/light_red"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/important"
            android:textSize="10sp" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/presentation_project"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175" />

    <TextView
        android:id="@+id/tanggal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="188dp"
        android:drawableLeft="@drawable/ic_calendar"
        android:drawablePadding="5dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/sunday_19_december_2022"
        android:textColor="@color/black"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/jam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_clock"
        android:drawablePadding="5dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/waktu"
        android:textColor="@color/black"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/tanggal" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/deskripsi"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/jam" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="382dp"
        android:layout_height="97dp"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/isi"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="@+id/textView12"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <Button
        android:id="@+id/edit"
        android:layout_width="378dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="17dp"
        android:backgroundTint="#000000"
        android:fontFamily="@font/poppins_semibold"
        android:text="Edit"
        android:textAllCaps="false"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc" />


</androidx.constraintlayout.widget.ConstraintLayout>