<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_coding"
    android:layout_width="match_parent"
    android:layout_height="86dp"
    android:layout_marginHorizontal="30dp"

    android:layout_marginTop="13dp"
    android:background="@drawable/rectangle1"
    android:paddingVertical="10dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView9">


    <TextView
        android:id="@+id/task_coding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/night_coding"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/detail_breaks"
        app:layout_constraintStart_toEndOf="@+id/durasi"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detail_breaks"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginEnd="82dp"
        android:drawableLeft="@drawable/ic_fluent_clock_pause"
        android:drawablePadding="2dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/_4_breaks"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/task_coding"
        app:layout_constraintTop_toBottomOf="@+id/task_coding" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/durasi"
        android:layout_width="58dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="19dp"
        android:background="@drawable/rectangle2"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/durasi_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/_120"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/detail_number1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/mins"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/durasi_timer"
            app:layout_constraintStart_toStartOf="@+id/durasi_timer" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/playtimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_frame_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>